@@ -29,6 +29,9 @@
 * When installing, if building a wheel fails, clear up the build directory
   before falling back to a source install. :issue:`3047`.
 
+* Fix user directory expansion when ``HOME=/``. Workaround for Python bug
+  http://bugs.python.org/issue14768, reported in :issue:`2996`.
+
 
 **7.1.2 (2015-08-22)**
 
